// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token Colon 1`] = `
Array [
  Object {
    "image": ":",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
]
`;

exports[`token Comma 1`] = `
Array [
  Object {
    "image": ",",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
]
`;

exports[`token JSONLexer 1`] = `
Array [
  Object {
    "endColumn": 1,
    "endLine": 2,
    "endOffset": 1,
    "image": "{",
    "startColumn": 1,
    "startLine": 2,
    "startOffset": 1,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "{",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LCurly",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
  Object {
    "endColumn": 9,
    "endLine": 3,
    "endOffset": 11,
    "image": "\\"Image\\"",
    "startColumn": 3,
    "startLine": 3,
    "startOffset": 5,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 10,
    "endLine": 3,
    "endOffset": 12,
    "image": ":",
    "startColumn": 10,
    "startLine": 3,
    "startOffset": 12,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 12,
    "endLine": 3,
    "endOffset": 14,
    "image": "{",
    "startColumn": 12,
    "startLine": 3,
    "startOffset": 14,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "{",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LCurly",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
  Object {
    "endColumn": 13,
    "endLine": 4,
    "endOffset": 28,
    "image": "\\"Width\\"",
    "startColumn": 7,
    "startLine": 4,
    "startOffset": 22,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 14,
    "endLine": 4,
    "endOffset": 29,
    "image": ":",
    "startColumn": 14,
    "startLine": 4,
    "startOffset": 29,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 19,
    "endLine": 4,
    "endOffset": 34,
    "image": "800",
    "startColumn": 17,
    "startLine": 4,
    "startOffset": 32,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 20,
    "endLine": 4,
    "endOffset": 35,
    "image": ",",
    "startColumn": 20,
    "startLine": 4,
    "startOffset": 35,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 14,
    "endLine": 5,
    "endOffset": 50,
    "image": "\\"Height\\"",
    "startColumn": 7,
    "startLine": 5,
    "startOffset": 43,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 15,
    "endLine": 5,
    "endOffset": 51,
    "image": ":",
    "startColumn": 15,
    "startLine": 5,
    "startOffset": 51,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 19,
    "endLine": 5,
    "endOffset": 55,
    "image": "600",
    "startColumn": 17,
    "startLine": 5,
    "startOffset": 53,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 20,
    "endLine": 5,
    "endOffset": 56,
    "image": ",",
    "startColumn": 20,
    "startLine": 5,
    "startOffset": 56,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 13,
    "endLine": 6,
    "endOffset": 70,
    "image": "\\"Title\\"",
    "startColumn": 7,
    "startLine": 6,
    "startOffset": 64,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 14,
    "endLine": 6,
    "endOffset": 71,
    "image": ":",
    "startColumn": 14,
    "startLine": 6,
    "startOffset": 71,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 38,
    "endLine": 6,
    "endOffset": 95,
    "image": "\\"View from 15th Floor\\"",
    "startColumn": 17,
    "startLine": 6,
    "startOffset": 74,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 39,
    "endLine": 6,
    "endOffset": 96,
    "image": ",",
    "startColumn": 39,
    "startLine": 6,
    "startOffset": 96,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 17,
    "endLine": 7,
    "endOffset": 114,
    "image": "\\"Thumbnail\\"",
    "startColumn": 7,
    "startLine": 7,
    "startOffset": 104,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 18,
    "endLine": 7,
    "endOffset": 115,
    "image": ":",
    "startColumn": 18,
    "startLine": 7,
    "startOffset": 115,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 20,
    "endLine": 7,
    "endOffset": 117,
    "image": "{",
    "startColumn": 20,
    "startLine": 7,
    "startOffset": 117,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "{",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LCurly",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
  Object {
    "endColumn": 15,
    "endLine": 8,
    "endOffset": 133,
    "image": "\\"Url\\"",
    "startColumn": 11,
    "startLine": 8,
    "startOffset": 129,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 16,
    "endLine": 8,
    "endOffset": 134,
    "image": ":",
    "startColumn": 16,
    "startLine": 8,
    "startOffset": 134,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 60,
    "endLine": 8,
    "endOffset": 178,
    "image": "\\"http://www.example.com/image/481989943\\"",
    "startColumn": 21,
    "startLine": 8,
    "startOffset": 139,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 61,
    "endLine": 8,
    "endOffset": 179,
    "image": ",",
    "startColumn": 61,
    "startLine": 8,
    "startOffset": 179,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 18,
    "endLine": 9,
    "endOffset": 198,
    "image": "\\"Height\\"",
    "startColumn": 11,
    "startLine": 9,
    "startOffset": 191,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 19,
    "endLine": 9,
    "endOffset": 199,
    "image": ":",
    "startColumn": 19,
    "startLine": 9,
    "startOffset": 199,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 23,
    "endLine": 9,
    "endOffset": 203,
    "image": "125",
    "startColumn": 21,
    "startLine": 9,
    "startOffset": 201,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 24,
    "endLine": 9,
    "endOffset": 204,
    "image": ",",
    "startColumn": 24,
    "startLine": 9,
    "startOffset": 204,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 17,
    "endLine": 10,
    "endOffset": 222,
    "image": "\\"Width\\"",
    "startColumn": 11,
    "startLine": 10,
    "startOffset": 216,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 18,
    "endLine": 10,
    "endOffset": 223,
    "image": ":",
    "startColumn": 18,
    "startLine": 10,
    "startOffset": 223,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 23,
    "endLine": 10,
    "endOffset": 228,
    "image": "100",
    "startColumn": 21,
    "startLine": 10,
    "startOffset": 226,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 7,
    "endLine": 11,
    "endOffset": 236,
    "image": "}",
    "startColumn": 7,
    "startLine": 11,
    "startOffset": 236,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "}",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RCurly",
      "tokenTypeIdx": 7,
    },
    "tokenTypeIdx": 7,
  },
  Object {
    "endColumn": 8,
    "endLine": 11,
    "endOffset": 237,
    "image": ",",
    "startColumn": 8,
    "startLine": 11,
    "startOffset": 237,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 16,
    "endLine": 12,
    "endOffset": 254,
    "image": "\\"Animated\\"",
    "startColumn": 7,
    "startLine": 12,
    "startOffset": 245,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 18,
    "endLine": 12,
    "endOffset": 256,
    "image": ":",
    "startColumn": 18,
    "startLine": 12,
    "startOffset": 256,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 24,
    "endLine": 12,
    "endOffset": 262,
    "image": "false",
    "startColumn": 20,
    "startLine": 12,
    "startOffset": 258,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "false",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "False",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
  Object {
    "endColumn": 25,
    "endLine": 12,
    "endOffset": 263,
    "image": ",",
    "startColumn": 25,
    "startLine": 12,
    "startOffset": 263,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 11,
    "endLine": 13,
    "endOffset": 275,
    "image": "\\"IDs\\"",
    "startColumn": 7,
    "startLine": 13,
    "startOffset": 271,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 12,
    "endLine": 13,
    "endOffset": 276,
    "image": ":",
    "startColumn": 12,
    "startLine": 13,
    "startOffset": 276,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 14,
    "endLine": 13,
    "endOffset": 278,
    "image": "[",
    "startColumn": 14,
    "startLine": 13,
    "startOffset": 278,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "[",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LSquare",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
  Object {
    "endColumn": 17,
    "endLine": 13,
    "endOffset": 281,
    "image": "116",
    "startColumn": 15,
    "startLine": 13,
    "startOffset": 279,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 18,
    "endLine": 13,
    "endOffset": 282,
    "image": ",",
    "startColumn": 18,
    "startLine": 13,
    "startOffset": 282,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 22,
    "endLine": 13,
    "endOffset": 286,
    "image": "943",
    "startColumn": 20,
    "startLine": 13,
    "startOffset": 284,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 23,
    "endLine": 13,
    "endOffset": 287,
    "image": ",",
    "startColumn": 23,
    "startLine": 13,
    "startOffset": 287,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 27,
    "endLine": 13,
    "endOffset": 291,
    "image": "234",
    "startColumn": 25,
    "startLine": 13,
    "startOffset": 289,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 28,
    "endLine": 13,
    "endOffset": 292,
    "image": ",",
    "startColumn": 28,
    "startLine": 13,
    "startOffset": 292,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 34,
    "endLine": 13,
    "endOffset": 298,
    "image": "38793",
    "startColumn": 30,
    "startLine": 13,
    "startOffset": 294,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
  Object {
    "endColumn": 35,
    "endLine": 13,
    "endOffset": 299,
    "image": "]",
    "startColumn": 35,
    "startLine": 13,
    "startOffset": 299,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "]",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RSquare",
      "tokenTypeIdx": 9,
    },
    "tokenTypeIdx": 9,
  },
  Object {
    "endColumn": 36,
    "endLine": 13,
    "endOffset": 300,
    "image": ",",
    "startColumn": 36,
    "startLine": 13,
    "startOffset": 300,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ",",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Comma",
      "tokenTypeIdx": 10,
    },
    "tokenTypeIdx": 10,
  },
  Object {
    "endColumn": 17,
    "endLine": 14,
    "endOffset": 318,
    "image": "\\"Reference\\"",
    "startColumn": 7,
    "startLine": 14,
    "startOffset": 308,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
  Object {
    "endColumn": 18,
    "endLine": 14,
    "endOffset": 319,
    "image": ":",
    "startColumn": 18,
    "startLine": 14,
    "startOffset": 319,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": ":",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Colon",
      "tokenTypeIdx": 11,
    },
    "tokenTypeIdx": 11,
  },
  Object {
    "endColumn": 23,
    "endLine": 14,
    "endOffset": 324,
    "image": "null",
    "startColumn": 20,
    "startLine": 14,
    "startOffset": 321,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "null",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Null",
      "tokenTypeIdx": 5,
    },
    "tokenTypeIdx": 5,
  },
  Object {
    "endColumn": 5,
    "endLine": 15,
    "endOffset": 330,
    "image": "}",
    "startColumn": 5,
    "startLine": 15,
    "startOffset": 330,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "}",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RCurly",
      "tokenTypeIdx": 7,
    },
    "tokenTypeIdx": 7,
  },
  Object {
    "endColumn": 1,
    "endLine": 16,
    "endOffset": 332,
    "image": "}",
    "startColumn": 1,
    "startLine": 16,
    "startOffset": 332,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "}",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RCurly",
      "tokenTypeIdx": 7,
    },
    "tokenTypeIdx": 7,
  },
]
`;

exports[`token LCurly 1`] = `
Array [
  Object {
    "image": "{",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "{",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LCurly",
      "tokenTypeIdx": 6,
    },
    "tokenTypeIdx": 6,
  },
]
`;

exports[`token LSquare 1`] = `
Array [
  Object {
    "image": "[",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "[",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "LSquare",
      "tokenTypeIdx": 8,
    },
    "tokenTypeIdx": 8,
  },
]
`;

exports[`token NumberLiteral 1`] = `
Array [
  Object {
    "image": "123",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /-\\?\\(0\\|\\[1-9\\]\\\\d\\*\\)\\(\\\\\\.\\\\d\\+\\)\\?\\(\\[eE\\]\\[\\+-\\]\\?\\\\d\\+\\)\\?/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "NumberLiteral",
      "tokenTypeIdx": 13,
    },
    "tokenTypeIdx": 13,
  },
]
`;

exports[`token RCurly 1`] = `
Array [
  Object {
    "image": "}",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "}",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RCurly",
      "tokenTypeIdx": 7,
    },
    "tokenTypeIdx": 7,
  },
]
`;

exports[`token RSquare 1`] = `
Array [
  Object {
    "image": "]",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "]",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "RSquare",
      "tokenTypeIdx": 9,
    },
    "tokenTypeIdx": 9,
  },
]
`;

exports[`token StringLiteral 1`] = `
Array [
  Object {
    "image": "\\"foo\\"",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": /"\\(\\?:\\[\\^\\\\\\\\"\\]\\|\\\\\\\\\\(\\?:\\[bfnrtv"\\\\\\\\/\\]\\|u\\[0-9a-fA-F\\]\\{4\\}\\)\\)\\*"/,
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "StringLiteral",
      "tokenTypeIdx": 12,
    },
    "tokenTypeIdx": 12,
  },
]
`;

exports[`token WhiteSpace 1`] = `Array []`;

exports[`token false 1`] = `
Array [
  Object {
    "image": "false",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "false",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "False",
      "tokenTypeIdx": 4,
    },
    "tokenTypeIdx": 4,
  },
]
`;

exports[`token null 1`] = `
Array [
  Object {
    "image": "null",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "null",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "Null",
      "tokenTypeIdx": 5,
    },
    "tokenTypeIdx": 5,
  },
]
`;

exports[`token true 1`] = `
Array [
  Object {
    "image": "true",
    "startOffset": 0,
    "tokenType": Object {
      "CATEGORIES": Array [],
      "PATTERN": "true",
      "categoryMatches": Array [],
      "categoryMatchesMap": Object {},
      "isParent": false,
      "name": "True",
      "tokenTypeIdx": 3,
    },
    "tokenTypeIdx": 3,
  },
]
`;
